    Fixed: Reboot the Vagrant box before provisioning it with i-MSCP (needed in case of kernel update)
    Fixed: Setup i-MSCP with public IP address (i-MSCP provision scripts)
    Merged: i-MSCP Vagrant provision scripts
    Updated: Vagrant box to vanilla Debian 9.1/Stretch from Vagrant Cloud (default Vagrant box)
    Review: Copy i-MSCP archive directory content under /user/local/src/imscp Vagrant box directory
    Review: Disable automatic box update checking in VagrantFile

VENDOR
    Added: Perl Array::Utils library
    Added: Perl library for exporting variables to PHP's expression (PHP::Var)
    Enhancement: Download and install all frontEnd dependencies through composer

YOUTRACK
    IP-1742 i-MSCP upgrade error - Unknown 'mail_user' database table in database update r254
    IP-1744 Couldn't go to support section -- 302 redirect to index.php -- reseller UI
    IP-1745 Rsyslog log rotation failure -- Initctl command (Upstart) doesn't know the 'rotate' action -- Ubuntu 14.04/Trusty Thar
    IP-1746 Error when generating SSL certificate - Could not write in openssl temp file
    IP-1749 User profile fields validation too strict
    IP-1750 Admin password cannot be changed
    IP-1751 CLIENT_DOMAIN_ALT_URLS reseted
    IP-1753 Preseed SECONDARY_DNS does not accept spaces (as indicated in the text)
    IP-1756 Reseller overview page is loading too slow due to a slow SQL query
    IP-1758 Could not remove HTTPD log directory -- The immutable bit is removed too late
    IP-1761 Wrong customer password after change through admin and reseller interfaces
    IP-1762 mod_proxy_fcgi - timeout too long

------------------------------------------------------------------------------------------------------------------------
Older release series
------------------------------------------------------------------------------------------------------------------------

See ./docs/Changelog-x.x.x files